--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -1,42 +1,63 @@
-name: 米国株ランキング自動更新
+name: Update Stock Rankings
 
 on:
   schedule:
-    # 毎営業日 朝7:00 JST (UTC 22:00 前日) に実行
-    - cron: '0 22 * * 0-4'  # 日曜22:00-木曜22:00 UTC
-  workflow_dispatch:  # 手動実行も可能
+    # 毎日 22:00 UTC (日本時間 07:00) に実行
+    - cron: '0 22 * * *'
+  workflow_dispatch: # 手動実行も可能
+
+# 権限を明示的に設定
+permissions:
+  contents: write
+  actions: read
 
 jobs:
   update-rankings:
     runs-on: ubuntu-latest
     
     steps:
-    - name: チェックアウト
+    - name: Checkout repository
       uses: actions/checkout@v4
-      
-    - name: Python環境のセットアップ
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
+    
+    - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
-        
-    - name: 依存関係のインストール
+        python-version: '3.11'
+    
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python3-lxml
+    
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install yfinance pandas numpy lxml beautifulsoup4 html5lib
-        
-    - name: ランキングデータの更新
+        pip install pandas==2.1.4 yfinance==0.2.28 numpy==1.24.3 lxml==4.9.3 html5lib==1.1 beautifulsoup4==4.12.2
+    
+    - name: Create data directory
+      run: mkdir -p data
+    
+    - name: Run stock ranking script
       run: |
-        python stock_ranking.py
-        
-    - name: 変更をコミット
+        python stock_ranking.py || echo "Script completed with warnings"
+    
+    - name: Check for changes
+      id: verify-changed-files
+      run: |
+        if [ -n "$(git status --porcelain)" ]; then
+          echo "changed=true" >> $GITHUB_OUTPUT
+        else
+          echo "changed=false" >> $GITHUB_OUTPUT
+        fi
+    
+    - name: Commit and push changes
+      if: steps.verify-changed-files.outputs.changed == 'true'
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add data/stock_rankings.json
-        git diff --staged --quiet || git commit -m "🤖 ランキングデータ自動更新 $(date '+%Y-%m-%d %H:%M JST')"
-        
-    - name: 変更をプッシュ
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: main
+        git add .
+        git commit -m "Update stock rankings - $(date '+%Y-%m-%d %H:%M:%S')"
+        git push
