--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         fetch-depth: 0
+        clean: true  # キャッシュクリア
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -35,7 +36,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pandas==2.1.4 yfinance==0.2.28 numpy==1.24.3 lxml==4.9.3 html5lib==1.1 beautifulsoup4==4.12.2
+        pip install pandas==2.1.4 yfinance==0.2.28 numpy==1.24.3 lxml==4.9.3 html5lib==1.1 beautifulsoup4==4.12.2 requests
+    
+    - name: Verify Python file
+      run: |
+        echo "Checking stock_ranking.py content..."
+        head -20 stock_ranking.py
+        echo "---"
+        grep -n "def get_stock_data_with_fallback" stock_ranking.py || echo "Function not found"
+        grep -n "ALPHA_VANTAGE_API_KEY" stock_ranking.py || echo "API key not found"
     
     - name: Create data directory
       run: mkdir -p data
